--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,11 +28,19 @@ services:
 
   fks_execution:
     name: fks_execution
-    health_url: http://fks-execution:8006/health
-    ready_url: http://fks-execution:8006/ready
-    live_url: http://fks-execution:8006/live
-    port: 8006
-    metrics_url: http://fks-execution:8006/metrics
+    health_url: http://fks-execution:8004/health
+    ready_url: http://fks-execution:8004/ready
+    live_url: http://fks-execution:8004/live
+    port: 8004
+    metrics_url: http://fks-execution:8004/metrics
+
+  fks_meta:
+    name: fks_meta
+    health_url: http://fks-meta:8005/health
+    ready_url: http://fks-meta:8005/ready
+    live_url: http://fks-meta:8005/live
+    port: 8005
+    metrics_url: http://fks-meta:8005/metrics
 
   fks_web:
     name: fks_web
@@ -58,11 +66,43 @@ services:
     port: 8008
     metrics_url: http://fks-analyze:8008/metrics
 
+  fks_auth:
+    name: fks_auth
+    health_url: http://fks-auth:8009/health
+    ready_url: http://fks-auth:8009/ready
+    live_url: http://fks-auth:8009/live
+    port: 8009
+    metrics_url: http://fks-auth:8009/metrics
+
+  fks_main:
+    name: fks_main
+    health_url: http://fks-main:8010/health
+    ready_url: http://fks-main:8010/ready
+    live_url: http://fks-main:8010/live
+    port: 8010
+    metrics_url: http://fks-main:8010/metrics
+
+  fks_training:
+    name: fks_training
+    health_url: http://fks-training:8011/health
+    ready_url: http://fks-training:8011/ready
+    live_url: http://fks-training:8011/live
+    port: 8011
+    metrics_url: http://fks-training:8011/metrics
+
+  fks_portfolio:
+    name: fks_portfolio
+    health_url: http://fks-portfolio:8012/health
+    ready_url: http://fks-portfolio:8012/ready
+    live_url: http://fks-portfolio:8012/live
+    port: 8012
+    metrics_url: http://fks-portfolio:8012/metrics
+
   fks_monitor:
     name: fks_monitor
-    health_url: http://fks-monitor:8009/health
-    ready_url: http://fks-monitor:8009/ready
-    live_url: http://fks-monitor:8009/live
-    port: 8009
-    metrics_url: http://fks-monitor:8009/metrics
+    health_url: http://fks-monitor:8013/health
+    ready_url: http://fks-monitor:8013/ready
+    live_url: http://fks-monitor:8013/live
+    port: 8013
+    metrics_url: http://fks-monitor:8013/metrics
 
