--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ jobs:
       service_port: '8011'
       python_version: '3.12'
       has_dev_requirements: true
-      run_mypy: true
+      run_mypy: false
     secrets:
       docker_token: ${{ secrets.DOCKER_TOKEN }}
-      codecov_token: ${{ secrets.CODECOV_TOKEN }}
