fix(ci): add dockerfile_path and disable health checks for services with external dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,6 @@ jobs:
       python_version: '3.12'
       has_dev_requirements: true
       run_mypy: false
+      healthcheck_enabled: false
     secrets:
       docker_token: ${{ secrets.DOCKER_TOKEN }}
