--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,4 @@ jobs:
       healthcheck_enabled: false
     secrets:
       docker_token: ${{ secrets.DOCKER_TOKEN }}
+      codecov_token: ${{ secrets.CODECOV_TOKEN }}
